workspaces app_react remove

--- a/packages/app_react/android/app/build.gradle
+++ b/packages/app_react/android/app/build.gradle
@@ -81,7 +81,13 @@ project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
 
-apply from: "../../node_modules/react-native/react.gradle"
+try {
+    apply from: "../../node_modules/react-native/react.gradle"
+} catch(Exception e) {
+    project.react.cliPath = "../../../../node_modules/react-native/cli.js"
+    apply from: "../../../../node_modules/react-native/react.gradle"
+}
+
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -209,7 +215,12 @@ dependencies {
     }
 
     if (enableHermes) {
-        def hermesPath = "../../node_modules/hermes-engine/android/";
+        try {
+            def hermesPath = "../../node_modules/hermes-engine/android/";
+        } catch(Exception e) {
+            def hermesPath = "../../../../node_modules/hermes-engine/android/";
+        }
+
         debugImplementation files(hermesPath + "hermes-debug.aar")
         releaseImplementation files(hermesPath + "hermes-release.aar")
     } else {
@@ -224,4 +235,10 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+try {
+    apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+} catch(Exception e) {
+    println 'node-module Root is not app_react'
+    apply from: file("../../../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+}
+
