--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "0.0.1",
   "description": "root package and app_react web_react server_express run and node_module",
   "workspaces": [
-    "packages/app_react",
     "packages/web_react",
     "packages/server_express"
   ],
   "scripts": {
-    "install:clean:linux": "npm cache clean --force & rm -rf node_modules/ & rm -rf package-lock.json && npm run install:clean:linux --workspace=packages/app_react && npm run install:clean:linux --workspace=packages/server_express && npm run install:clean:linux --workspace=packages/web_react",
+    "start_server_express": "npm run start --workspace=packages/server_express",
+    "start_web_react": "npm run start --workspace=packages/web_react",
+    "install:clean:linux": "npm cache clean --force & rm -rf node_modules/ & rm -rf package-lock.json && npm run install:clean:linux --workspace=packages/server_express && npm run install:clean:linux --workspace=packages/web_react",
     "install:clean:win": "npm cache clean --force & rd /s /q node_modules & del /f /q /a package-lock.json && npm run install:clean:win --workspaces",
     "install:opsion": "/nodejs/node.exe --max-old-space-size=2048 /nodejs/node_modules/npm/bin/npm-cli.js install --scripts-prepend-node-path=auto"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "app_react": "file:packages/app_react",
-    "javascript_project_main": "file:",
-    "server-express": "file:packages/server_express",
-    "web_react": "file:packages/web_react"
+    "javascript_project_main": "file:"
   }
 }
