--- a/packages/app_react/android/settings.gradle
+++ b/packages/app_react/android/settings.gradle
@@ -1,3 +1,9 @@
 rootProject.name = 'app_react'
-apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+try {
+    apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+} catch(Exception e) {
+    println 'node-module Root is not app_react'
+    apply from: file("../../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+}
+
 include ':app'
