--- a/packages/app_react/package.json
+++ b/packages/app_react/package.json
@@ -20,7 +20,7 @@
     "@babel/core": "7.16.0",
     "@babel/runtime": "7.16.3",
     "@react-native-community/eslint-config": "^3.0.1",
-    "babel-jest": "26.6.3",
+    "babel-jest": "~27.4.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -30,7 +30,7 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-native": "^3.11.0",
-    "jest": "26.6.3",
+    "jest": "~27.4.5",
     "metro-react-native-babel-preset": "0.66.2",
     "react-test-renderer": "17.0.2"
   },
