--- a/packages/server_express/package.json
+++ b/packages/server_express/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www PORT=4000",
+    "start": "node -r dotenv/config ./bin/www dotenv_config_path=../.env_prd",
+    "start:dev": "node -r dotenv/config ./bin/www dotenv_config_path=../.env_dev",
     "install:clean:linux": "rm -rf node_modules & rm -rf package-lock.json",
     "install:clean:win": "rd /s /q node_modules & del /f /q /a package-lock.json"
   },
@@ -13,6 +14,7 @@
     "express": "^4.17.2",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "dotenv": "~10.0.0"
   }
 }
