--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "runReact",
             "type": "shell",
-            "command": "./nodejs/npm",
+            "command": "${workspaceFolder}\\nodejs\\npm.CMD",
 			"args": ["run", "start_web_react"],
             "problemMatcher": []
         }
