--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "packages/server_express"
   ],
   "scripts": {
-    "start_server_express:dev": "npm run start:dev --workspace=packages/server_express",
-    "start_web_react": "npm run start --workspace=packages/web_react",
+    "start_server_express:dev": "/nodejs/npm run start:dev --workspace=packages/server_express",
+    "start_web_react": "/nodejs/npm run start --workspace=packages/web_react",
     "install:clean:linux": "npm cache clean --force & rm -rf node_modules/ & rm -rf package-lock.json && npm run install:clean:linux --workspace=packages/server_express && npm run install:clean:linux --workspace=packages/web_react",
     "install:clean:win": "npm cache clean --force & rd /s /q node_modules & del /f /q /a package-lock.json && npm run install:clean:win --workspaces",
     "install:opsion": "/nodejs/node.exe --max-old-space-size=2048 /nodejs/node_modules/npm/bin/npm-cli.js install --scripts-prepend-node-path=auto"
